fix: z-index for dropdown less than page-head

--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -400,7 +400,9 @@ body[data-route^="Module"] .main-menu {
 		max-height: 300px;
 		overflow-y: auto;
 		max-width: 250px;
+		z-index: 100;
 	}
+
 	.dropdown-search {
 		padding: 8px;
 	}
